# civil-mix

./: README.md  experiment.ipynb  main.py  pyproject.toml  requirements.txt  train.py
assests/models/: lasso_model.pkl  scaler.pkl
datasets/: merged_dataset.csv  original_dataset.xlsx
