[project]
name = "civil-mix"
version = "0.1.0"
description = "ML regression pipeline for 28-day concrete compressive strength prediction, engineered by Arnav Gupta."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]
